--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
+  geolocator: ^5.3.2+2
+  http: ^0.12.1
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
@@ -22,7 +25,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+    - assets/images/
+    - assets/fonts/
 
   fonts:
     - family: Spartan MB
